Add login, register and create events